--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_005_Masivo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_005_Masivo.cshtml
@@ -1,18 +1,88 @@
-﻿
+﻿@model Core.Erp.Info.Reportes.Banco.BAN_005_Info
 @{
-    ViewBag.Title = "BAN_005";
+    Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
+    ViewBag.Title = "BAN_007";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
 }
-@using (Html.BeginForm())
+@using (Html.BeginForm("BAN_005_Masivo", "BancoReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.DevExpress().WebDocumentViewer(settings =>
-     {
-         settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
-         settings.MobileMode = false;
-         settings.Name = "webDocumentViewer";
-     }).Bind(Model).GetHtml()
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    <div class="box">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+                </div>
+            </div>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+
+        </div>
+        <div class="box-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdBanco">Banco</label>
+                            @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_banco, "IdBanco", "ba_descripcion"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="NumDesde">#Desde</label>
+                            @Html.TextBoxFor(q => q.NumDesde, new { @class = "form-control", @id = "ba_num_digito_cheq" })
+                            @Html.ValidationMessageFor(q => q.NumDesde, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="NumDesde">#Hasta</label>
+                            @Html.TextBoxFor(q => q.NumHasta, new { @class = "form-control", @id = "ba_num_digito_cheq" })
+                            @Html.ValidationMessageFor(q => q.NumHasta, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /.box-body -->
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">@ViewBag.Title</h3>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            @Html.DevExpress().WebDocumentViewer(settings =>
+       {
+           settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
+           settings.MobileMode = false;
+           settings.Name = "webDocumentViewer";
+       }).Bind(ViewBag.Report).GetHtml()
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+        </div>
+        <!-- /.box-footer-->
+    </div>
 }
+
 
