--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Anular.cshtml
@@ -39,9 +39,9 @@
 
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="IdNivel">Nivel de descuento*</label>
-                    @Html.DropDownListFor(q => q.IdNivel, new SelectList(ViewBag.lst_nivel, "IdNivel", "Descripcion"), new { @class = "form-control", @id = "NivelPrecio" })
-                    @Html.ValidationMessageFor(q => q.IdNivel, "", new { @class = "text-danger" })
+                    <label for="IdCaja">Caja*</label>
+                    @Html.DropDownListFor(q => q.IdCaja, new SelectList(ViewBag.lst_caja, "IdCaja", "ca_Descripcion"), new { @class = "form-control", @id = "NivelPrecio" })
+                    @Html.ValidationMessageFor(q => q.IdCaja, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
