--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia.cshtml
@@ -87,8 +87,9 @@
         settings.Columns.Add("Descripcion", "Nómina").Width = Unit.Percentage(22);
         settings.Columns.Add("DescripcionProcesoNomina", "Nómina tipo").Width = Unit.Percentage(8);
         settings.Columns.Add("NombreProceso", "Archivo").Width = Unit.Percentage(8);
+        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(15);
 
-
+        
         settings.Columns.Add(column =>
         {
             column.FieldName = "pe_FechaIni";
